# Donghaeng-LOTTO

./: .gitignore  .gitmessage  README.md  app.py  baseball.glb  demo.txt  dk.txt  pyproject.toml  requirements.txt  test_data.ipynb
analysis/: eda.md  eda260614.ipynb  eda_final.ipynb  eda_master_table.ipynb
kbo_pipeline/: README.md  pyproject.toml  test.ipynb  test.py  test_fixtures.py  whatif_example.json
kbo_pipeline/models/: evaluation_report.json  feature_importance.csv  lgbm_model.pkl  logistic_model.pkl  training_report.md  training_report_2026-06-12.md  training_report_2026-06-14.md
kbo_pipeline/scripts/: run_build_all_features.py  run_build_features.py  run_build_model_master_table.py  run_collect_2008_2025.py  run_train_models.py  run_whatif.py
kbo_pipeline/src/: config.py
kbo_pipeline/src/clients/: naver_api.py
kbo_pipeline/src/collectors/: collect_games.py  collect_records.py  collect_relays.py
kbo_pipeline/src/features/: model_master_table.py  model_master_table_ext.py  pa_features.py  pitcher_context_park.py  player_id_map.py  pre_game_stats.py  recency_split_stats.py  we_re_table.py
kbo_pipeline/src/models/: feature_config.py  train.py  whatif_engine.py
kbo_pipeline/src/parsers/: parse_records.py  parse_relays.py  state_reconstructor.py
kbo_pipeline/src/quality/: quality_report.py
kbo_web_backend/: main.py
kbo_web_frontend/: package-lock.json  package.json  tailwind.config.js
pages/: 01_Model_Analysis.py  01_WhatIf_Analysis.py  02_Player_Analysis.py  03_Season_Dashboard.py  05_Pregame_Predict.py  06_Pitcher_Timing.py
(+6 files in other folders)
