[project]
name = "kbo-whatif-pipeline"
version = "0.1.0"
description = "KBO 2008-2025 play-by-play 수집/ETL 파이프라인 (What-if 승리확률 모델용)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
    "numpy>=1.26",
    "tqdm>=4.66",
    "scikit-learn>=1.9.0",
    "lightgbm>=4.6.0",
]

[tool.uv]
package = false
